Minor text improvements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/exchange
 spring.datasource.username=exchange
 spring.datasource.password=exchange
 
-# drop n create table again, good for testing, comment this in production
+# Drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
